[package]
name = "fast-meme-trader"
version = "0.3.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-fast Solana meme coin trading bot with ATH strategies"

[dependencies]
# Solana Core - Fixed compatible versions
solana-client = "2.3.4"
solana-sdk = "2.3.1"
solana-program = "2.3.0"

# SPL Token Support
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

# Async Runtime
tokio = { version = "1.46.1", features = ["full", "rt-multi-thread"] }

# HTTP Client (ureq doesn't require OpenSSL)
ureq = { version = "2.9", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Encoding
base64 = "0.22.1"
bs58 = "0.5"

# Mathematics and Precision
rust_decimal = { version = "1.37.2", features = ["maths", "serde"] }

# Time and Date
chrono = { version = "0.4", features = ["serde", "clock"] }

# Error Handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Environment Variables
dotenv = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1.74"

[lib]
name = "fast_meme_trader"
path = "src/lib.rs"

[[bin]]
name = "trader"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation during development
opt-level = 0
debug = true